libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/input-4.jsonc
//@ run: fail
//@ description: input/4 should not compile
[
  "::kernel::special_form::input",
  "x",
  "Y",
  "z",
  "w"
  //~^ ERROR Remove this argument
]
